# rustc-bugs

./: .README.md.un~  README.md  bug.py  info-template.toml  run_all.py
NEW/: Cargo.toml  TODO.md  check.py  gen_docs.py
NEW/backtraces/assertion_failed/: beta  stable
NEW/backtraces/broken_mir/: nightly
NEW/backtraces/cat_expr_errd/: nightly
NEW/backtraces/closure_expr_node_id/: beta  stable
NEW/backtraces/closure_type_err/: beta  nightly  stable
NEW/backtraces/expected_const_got/: beta  nightly  stable
NEW/backtraces/impossible_case_reached/: beta  nightly  stable
NEW/backtraces/infinite_recursion/: beta  nightly  stable
NEW/backtraces/invalid_loop_id/: beta  stable
NEW/backtraces/missing_binding_mode/: beta  nightly  stable
NEW/backtraces/multiple_assignments/: beta  nightly  stable
NEW/backtraces/no_kind_for_cast/: beta  nightly  stable
NEW/backtraces/type_not_region/: beta  nightly  stable
NEW/backtraces/unexpected_type/: beta  nightly  stable
NEW/src/: .lib.rs.un~  lib.rs  lib.rs~
OLD/: README.md  toml_config.py
break_in_closure_argument/: info.toml
break_labeled_while/: info.toml
break_labeled_while_in_const_expr/: Cargo.toml  info.toml
compiler-stack-overflow/: Cargo.toml
continue_in_closure_argument/: Cargo.toml  info.toml
existential-type-ice/: Cargo.toml
llvm-opt-ice/: Cargo.toml
match_impossible_case/: .info.toml.un~  info.toml
return_closure_in_array_length/: Cargo.toml  info.toml
return_closure_with_arg_in_array_length/: info.toml
self_referential_trait_subsitutions/: info.toml
unexpected_type/: info.toml  (+1 more)
(+66 files in other folders)
